# mudap

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
docs/: links.txt  notes-z80emu.md
docs/dap-samples/: dao5  dap1  dap2  dap3  dap4  dap6  dap7
ext/: CMakeLists.txt  LICENSE  package.json
include/dap/: dap.h  handler.h
include/sdcc/: cdb_parser.h  cdbg_info.h  map_parser.h  parser.h  segment.h  symbol.h  symbol_parser.h  util.h
lib/: CMakeLists.txt
lib/dap/: CMakeLists.txt  dap.cpp  request.cpp  requests.cpp  response.cpp
lib/gdb/include/gdb/: gdb.h  packet.h
lib/sdcc/: CMakeLists.txt  cdb_parser.cpp  map_parser.cpp  util.cpp
src/: CMakeLists.txt  dbg.cpp  dbg.h  emulator.cpp  main.cpp  socket_stream.cpp  socket_stream.h
src/handlers/: configuration_done.cpp  continue.cpp  disassemble.cpp  disconnect.cpp  initialize.cpp  launch.cpp  next.cpp  read_memory.cpp  scopes.cpp  set_breakpoints.cpp  set_exception_breakpoints.cpp  set_instruction_breakpoints.cpp  source.cpp  stack-trace.cpp  stack_trace.cpp  step_in.cpp  step_out.cpp  threads.cpp  variables.cpp
src/idp-emu/: CMakeLists.txt  device.h  main.cpp  partner.h
src/idp-gdb/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  dap-tests.cxx  mudap-tests[1]_include.cmake  sdcc-cdb-tests.cpp  sdcc-map-tests.cpp  smoke-test.cpp  test-cdb.cpp  test-executive.cpp
tests/data/: bcd.sym  clock.adb  clock.sym  g01.sym  g02.sym  iskra.sym  main.adb  main.sym  poly.adb  poly.sym  screen.adb  screen.sym  sprite.adb  sprite.sym  ura.cdb  ura.ihx  ura.map  ura.noi
